Fix primary color contrast

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -246,7 +246,7 @@
 // The "primary" color is the only required color in the map.
 
 $colors: (
-	primary:	#538494,
+	primary:	#4F7A8C,
 	secondary:	#e6e1d8,
     dark:		#222,
     light:		#f4f4f4
